--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,15 @@
   * Fix truncation of timestamps in the live status monitor.
+  * Upgraded Windows cross tools to:
+	+ binutils-2.23.1
+	+ gcc-4.7.3
+	+ gmp-5.1.2
+	+ mingw-w64-v2.0.8
+	+ mpc-1.0.1
+	+ mpfr-3.1.2
+  * Upgraded Windows depkgs to:
+	+ openssl-1.0.1e
+	+ zlib-1.2.8
+	+ pcre-8.33
 
 2013-06-29 Changes in burp-1.3.34:
   * Contributions from Avi Rozen:
