--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2013-06-26 Changes in burp-1.3.36:
   * Fix truncation of timestamps in the live status monitor.
   * Default the 'resume partial' feature to being off, and add an option to
     turn it on.
