--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
-  * Add bassu's RHEL spec files and related things.
-  * Add ziirish's include_glob feature.
+2013-07-29 Changes in burp-1.4.0
+  * Add Abbas Khan's RHEL spec files and related things.
+  * Add Benjamin Sans's include_glob feature.
 
 2013-06-26 Changes in burp-1.3.36:
   * Fix truncation of timestamps in the live status monitor.
