--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
   * Fix long list and status monitor output when a directory argument is given.
 
+2013-07-29 Changes in burp-1.3.36:
   * Fix truncation of timestamps in the live status monitor.
   * Default the 'resume partial' feature to being off, and add an option to
     turn it on.
