--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
   * Fix long list and status monitor output when a directory argument is given.
   * Fix restore problem with backups containing both compressed and
     uncompressed files.
+  * Bug fix for an interrupted backup causing a resume when a restore_client
+    connects.
+  * Bug fix for defaulting 'resume partial' to off.
 
 2013-07-29 Changes in burp-1.3.36:
   * Fix truncation of timestamps in the live status monitor.
