--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,13 @@
+2013-10-02 Changes in burp-1.4.4:
   * Bug fix for include_glob xmalloc success check on Windows.
+  * Fix long list and status monitor output when a directory argument is given.
+  * Fix restore problem with backups containing both compressed and
+    uncompressed files.
+  * Bug fix for an interrupted backup causing a resume when a restore_client
+    connects.
+  * Bug fix for defaulting 'resume partial' to off.
+
+2013-10-02 Changes in burp-1.3.38:
   * Fix long list and status monitor output when a directory argument is given.
   * Fix restore problem with backups containing both compressed and
     uncompressed files.
