--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
   * Make the server request the whole file when ctime changes on Windows,
     otherwise changes to metadata when the file content is unchanged will not
     be noticed.
+  * Add 'delete' to the client help output.
 
 2013-10-02 Changes in burp-1.3.38:
   * Fix long list and status monitor output when a directory argument is given.
