--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -502,7 +502,7 @@ Name of the client operating system. Should match a directory name in the server
 .SH INCLUDES / EXCLUDES
 
 .TP
-The following options specify exactly what is backed up. The client can specify these options, or if you include at least one 'include=' in the client configuration files on the server, the server will override them all.
+The following options specify exactly what is backed up. The client can specify these options, or if you have at least one 'include=' or 'include_glob=' in the client configuration files on the server, the server will override them all.
 .TP
 \fBinclude=[path]\fR
 Path to include in the backup. You can have multiple include lines. Use forward slashes '/', not backslashes '\\' as path delimiters.
