--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
     otherwise changes to metadata when the file content is unchanged will not
     be noticed.
   * Add 'delete' to the client help output.
+  * When backing up, open files with O_NOATIME flag so that the access time is
+    not changed.
 
 2013-10-02 Changes in burp-1.3.38:
   * Fix long list and status monitor output when a directory argument is given.
