Bug fix for no failure notification being sent when the backup directory cannot be created.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,8 @@
     also needing an 'include='.
   * When backing up, open files and directories with O_NOATIME flag so that the
     access time is not changed.
+  * Bug fix for no failure notification being sent when the backup directory
+    cannot be created.
 
 2013-10-02 Changes in burp-1.4.4:
   * Bug fix for include_glob xmalloc success check on Windows.
