--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@
   * Add 'delete' to the client help output.
   * When backing up, open files and directories with O_NOATIME flag so that the
     access time is not changed.
+  * Bug fix for no failure notification being sent when the backup directory
+    cannot be created.
 
 2013-10-02 Changes in burp-1.3.38:
   * Fix long list and status monitor output when a directory argument is given.
