Extend the JSON list functionality so that covers all types of listing.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -86,7 +86,7 @@ which to match backup files. Use it for lists and restores.
 For use with restores \- strip a number of leading path components.
 .TP
 \fB\-j\fR \fB\fR
-Format long file listing as JSON.
+Format list output as JSON.
 .TP
 \fB\-x\fR
 For Windows clients only - do not use the Windows VSS API on restore. Give this option when you are restoring a backup that contains no VSS information.
