--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
   * Be sure to close directory file descriptor if fdopendir() fails.
+  * Extend the JSON list functionality so that covers all types of listing.
 
 2013-10-30 Changes in burp-1.4.4:
   * Add client option '-a T', which checks whether it is yet time for a backup
