Add machine-readable statistics files for restores and verifies in the backup directories.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
   * Extend the JSON list functionality so that covers all types of listing.
   * Allow the backup to carry on if a filename was too long for the server.
   * Regenerate server certificates if the CA directory exists and is empty.
+  * Add machine-readable statistics files for restores and verifies in the
+    backup directories.
 
 2013-10-30 Changes in burp-1.4.4:
   * Add client option '-a T', which checks whether it is yet time for a backup
