--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Changes in burp-1.3.42:
+  * In backup phase 4, a 'deleteme' directory may already exist if the server
+    was previously interrupted whilst deleting it. If so, delete it before
+    attempting to rename anything to it.
+
+2013-10-30 Changes in burp-1.3.40:
   * Make the server request the whole file when ctime changes on Windows,
     otherwise changes to metadata when the file content is unchanged will not
     be noticed.
