--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Changes in burp-1.3.42:
+2013-11-27 Changes in burp-1.3.42:
   * In backup phase 4, a 'deleteme' directory may already exist if the server
     was previously interrupted whilst deleting it. If so, delete it before
     attempting to rename anything to it.
