--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2013-12-01 Changes in burp-1.3.44:
+  * Bug fix for false failure notification when a client tries to connect again
+    while a backup is still in progress.
+
 2013-11-27 Changes in burp-1.3.42:
   * In backup phase 4, a 'deleteme' directory may already exist if the server
     was previously interrupted whilst deleting it. If so, delete it before
