--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Another bug fix for false failure notification.
+
 2013-12-01 Changes in burp-1.3.44:
   * Bug fix for false failure notification when a client tries to connect again
     while a backup is still in progress.
