--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
   * Another bug fix for false failure notification.
+  * Turn off excessive logging on some restores.
 
 2013-12-01 Changes in burp-1.3.44:
   * Bug fix for false failure notification when a client tries to connect again
