--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-  * Another bug fix for false failure notification.
+  * Another bug fix for false failure notification - differentiate between
+    not getting a lock and getting an error when trying to get a lock.
   * Turn off excessive logging on some restores.
 
 2013-12-01 Changes in burp-1.3.44:
