--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2013-12-30 Changes in burp-1.3.46:
   * Another bug fix for false failure notification - differentiate between
     not getting a lock and getting an error when trying to get a lock.
   * Turn off excessive logging on some restores.
