--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Bug fix for restoring correct file times on Windows clients.
+
 2013-12-30 Changes in burp-1.3.46:
   * Another bug fix for false failure notification - differentiate between
     not getting a lock and getting an error when trying to get a lock.
