--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2014-01-27 Changes in burp-1.3.48:
   * Bug fix for restoring correct file times on Windows clients.
 
 2013-12-30 Changes in burp-1.3.46:
