--- a/debian/changelog
+++ b/debian/changelog
@@ -1,271 +1,268 @@
-burp (1.3.26-2) experimental; urgency=low
+burp (1.3.48-1) unstable; urgency=low
 
-  * Reformated changelog
-  * Changed copyright from /debian/* from GPL-2 to AGPL-3 
-  * Added Vcs-Browser to control file  
-  * Bumpt dephelper to 9
-  * Bumpt compat to 9
+  * New upstream release.
+    - Fix long delay in init script when the stop function is
+      invoked. (Closes: #687523)
+    - Add missing compiler and linker flags on armel, armhf, i386,
+      kfreebsd-amd64, powerpc and s390 architectures. (Closes: #675368)
+    - Fix bedup crashing with exit status 139. (Closes: #715678)
+    - Fix restoring of correct file times on Windows clients.
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Thu, 07 Mar 2013 14:48:39 +0100
+  * Bump Standards-Version to 3.9.5.0:
+    - Add dependency on initscripts (>= 2.88dsf-13.3).
+  * Add Vcs-Browser field to debian/control.
+  * Bump dephelper version to 9:
+    - Fixes lintian reports about missing hardening of
+      binaries ("hardening-no-relro"). (Closes: #735128)
+  * Update address of FSF in debian/copyright. (Closes: #735129)
+  * Change copyright for files in debian/ from GPL-2 to AGPL-3.
+  * Add upstream patch to disable compile-time test when no
+    PRNG is available: (Closes: #675761)
+    - debian/patches/disable_tests.patch
+  * Add patch to display a list of available log files
+    when one or more compile-time tests have failed:
+    - debian/patches/showlogs.patch
+  * Adjust debian/watch file to track stable 1.3.x releases only,
+    the experimental 1.4.x releases are ignored.
 
-burp (1.3.26-1) unstable; urgency=low
-
-  * New upstream release version 1.3.26
-    -  When a read_blockdev option matches a symlink, backup the destination as
-    a raw block device.
+  * Changes in burp 1.3.46:
+    - Another bug fix for false failure notification - differentiate between
+      not getting a lock and getting an error when trying to get a lock.
+    - Turn off excessive logging on some restores.
+  * Changes in burp 1.3.44:
+    - Fix false failure notification when a client tries
+      to connect again while a backup is still in progress.
+  * Changes in burp 1.3.42:
+   - In backup phase 4, a 'deleteme' directory may already exist if the server
+     was previously interrupted whilst deleting it. If so, delete it before
+     attempting to rename anything to it.
+  * Changes in burp 1.3.40:
+   - Make the server request the whole file when ctime changes on Windows,
+     otherwise changes to metadata will not be registered when the file
+     contents are unchanged.
+   - Add 'delete' to the client help output.
+   - When backing up, open files and directories with O_NOATIME flag so that the
+     access time is not changed.
+   - Fix missing failure notification when the backup directory
+     cannot be created.
+  * Changes in burp 1.3.38:
+   - Fix long list and status monitor output when a directory argument is given.
+   - Fix restore problem with backups containing both compressed and
+     uncompressed files.
+   - Fix interrupted backups triggering a resume when a restore_client connects.
+   - Fix defaulting 'resume partial' to off.
+  * Changes in burp 1.3.36:
+   - Fix truncation of timestamps in the live status monitor.
+   - Default the 'resume partial' feature to being off, and add an option to
+     turn it on.
+  * Changes in burp 1.3.34:
+   - Contributions from Avi Rozen:
+     + Major autoconf cleanup.
+     + Initial support for cross-building Android targets.
+   - On the server, indicate where logging is occurring.
+   - Fix bedup segfaulting when using -m with no argument.
+  * Changes in burp 1.3.32:
+   - Fix status monitor segfault.
+   - Run timed backups with lower thread priority on Windows.
+   - Add 'vss_drives' option, which gives the ability to specify which Windows
+     drives get a VSS snapshot.
+  * Changes in burp 1.3.30:
+   - Add a warning when run on Windows without admin privileges.
+   - Perform fewer lstat()s on systems that support d_type (i.e. most
+     Linux systems) in order to speed up certain operations.
+   - Allow _FORTIFY_SOURCE to work.
+   - Fix problem with burp_ca.bat and repeated field names in burp.conf.
+   - Put registry keys back into the Windows installer.
+   - Fix for SIGHUP reload causing the server to go into non-forking mode.
+   - Mark backups which can be deleted.
+   - Add a client option for deleting backups which can be deleted.
+   - Add a 'client_can_delete' option on the server.
+   - Fix for using the wrong lock directory when 'directory' is
+     overridden for a client.
+  * Changes in burp 1.3.28:
+   - Add the ability to resume partially transferred files.
+   - Make sure 'timer conditions not met' message appears on the client.
+   - Fix turning off compression before resuming a backup.
+  * Changes in burp 1.3.26:
+    - When a read_blockdev option matches a symlink, backup the destination as
+      a raw block device.
     - Avi Rozen's valgrind cleanup. Includes a fix for a bug in restore_client.c
-    where overwrite_ok checked the wrong stat struct when considering a FIFO.
+      where overwrite_ok checked the wrong stat struct when considering a FIFO.
     - Add '-v' option to bedup (output the names of duplicate files).
     - Add '-d' option to bedup (delete duplicates instead of hardlinking - not
-    for use on burp storage directories).
-
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 05 Mar 2013 15:26:40 +0100
-
-burp (1.3.24-1) unstable; urgency=low
-
-  * New upstream release version 1.3.24
-    - Bug fix for strip_vss/split_vss truncating backups of changed files on
-      Windows.
-    - Bug fix for autoupgrade failing on Windows if autoupgrade_dir has been
-      modified.
-    - Bug fix for listing backups created with split_vss=1.
-    - Bug fix for restoring uncompressed encrypted backups created with
-      split_vss=1.
-    - Bug fix for making backups with min_file_size and split_vss=1.
-    - Bug fix for Debian init do_stop() function from Peter Maloney.
-    - Bug fix for resuming backups where a file to patch has already been
-      hard linked into place. Also get the client to report a more helpful
-      message if any similar problem happens.
-    - Bug fix for signal handler race conditions.
-    - Bug fix for the forkchild child not exiting when execv fails.
-    - Changed the run_script() code to take an array.
-    - Added server_script_pre_notify and server_script_post_notify options.
-    - Rework the test script so that it can test Windows clients.
-    - Attempt a Windows signal handler to try to shut VSS down nicely on certain
-      signals, such as Ctrl-C.
-    - Include an example server side offsite rsync backup script. This is not
-      quite working properly, but it may still be useful.
-    - Big fix to stop Windows going to sleep during a backup, from Avi Rozen.
-    - unable to set datapath" backup resume bug (Closes: #695641)
-    - spelling error: 'overriddden' (Closes: #685568)
-    - error in client_can_list section  (Closes: #694506)
-
- - - Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 12:45:58 +0200
-
-burp (1.3.22-1) UNRELEASED; urgency=low
-  * New upstream release version 1.3.22
+      for use on burp storage directories).
+  * Changes in burp 1.3.24:
+    - Fix strip_vss/split_vss truncating backups of changed files on Windows.
+    - Fix auto upgrade failing on Windows if autoupgrade_dir has been modified.
+    - Fix listing backups created with split_vss=1.
+    - Fix restoring uncompressed encrypted backups created with split_vss=1.
+    - Fix making backups with min_file_size and split_vss=1.
+    - Fix Debian init do_stop() function (Thanks Peter Maloney).
+    - Fix resuming backups where a file to patch has already been hard-linked
+      into place. Also get the client to report a more helpful message if
+      any similar problem occurs.
+    - Fix signal handler race conditions.
+    - Fix forkchild child not exiting when execv fails.
+    - Change run_script() code to take an array.
+    - Add server_script_pre_notify and server_script_post_notify options.
+    - Rework the test script so that it can test Windows clients as well.
+    - Let a Windows signal handler try to shut VSS down nicely on certain
+      signals such as Ctrl-C.
+    - Include an example server-side off-site rsync backup script. This is not
+      quite working properly yet but it may still be useful.
+    - Fix Windows preventing from going to sleep during a
+      backup. (Thanks Avi Rozen).
+    - Fix "unable to set datapath: (null)" backup
+      resuming issue. (Closes: #695641)
+    - Fix spelling error 'overriddden' in the
+      burp(8) manpage. (Closes: #685568)
+    - Fix error in client_can_list section in the
+      burp(8) manpage. (Closes: #694506)
+  * Changes in burp 1.3.22:
     - Contributions from Avi Rozen:
-	+ Added a '-j' option to format the long file list as JSON. Intended
-	  for use with burpfs (https://github.com/ZungBang/burpfs).
-	+ Bug fix for list/verify/restore when regex is long and/or contains
-	  a colon.
-	+ Bug fix for split_vss backups being restored on a linux
-    	  restore_client with the -f (force) option. Prevents overwrite of the
-          destination file with the vss footer.
-     - Contributions for burp_ca from Patrick Koppen:
-	+ Bug fix for the size option.
-	+ Use shell numeric comparison instead of string comparison.
-	+ Added subjectAltName patch (in case it is needed outside of burp).
+      + Add a '-j' option to format the long file-list as JSON. Intended
+        for use with burpfs (https://github.com/ZungBang/burpfs).
+      + Fix list/verify/restore when regex is long and/or
+        contains a colon.
+      + Fix split_vss backups being restored on a linux restore_client
+        with the -f (force) option. Prevents overwriting of the
+        destination file with the vss footer.
+    - Contributions for burp_ca from Patrick Koppen:
+      + Fix the size option.
+      + Use shell numeric comparison instead of string comparison.
+      + Added subjectAltName patch (in case it is needed outside of burp).
+  * Changes in burp 1.3.18:
+    - Fix "split/strip_vss = 1" on the client side always resulting in
+      all files being backed up.
+    - Make configure default to /usr as prefix.
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Wen, 03 jan 2012 12:00:00 +0200
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 31 Dec 2013 16:42:30 +0100
 
+burp (1.3.8-1) unstable; urgency=low
 
-burp (1.3.18-1) UNRELEASED; urgency=low
+  * New upstream release.
 
-  * New upstream release version 1.3.18
-    - Bug fix for split/strip_vss = 1 on the client side always causing all files
-    to be backed up.
-    - Make configure report /usr as the default prefix.
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Fri, 08 Jun 2012 10:49:18 +0200
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 18 dec  2012 12:12:34 +0200
+burp (1.3.6-1) unstable; urgency=low
 
+  * New upstream release.
+  * Drop obsolete lintian overrides:
+    - non-standard-file-perm etc/burp/ssl_cert-client.pem 0600 != 0644
+    - non-standard-file-perm etc/burp/ssl_cert-server.pem 0600 != 0644
+  * Update debian/copyright to copyright format 1.0.
 
-burp (1.3.6-1) UNRELEASED; urgency=low
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 13:29:44 +0200
 
-  * New upstream release version 1.3.6
-
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 12:45:58 +0200
 burp (1.3.4-2) unstable; urgency=low
 
-  * Fixes building isues with hppa and powerpcspe and sparc64
-    Changed debhelper version to (>= 8)
+  * Bump debhelper version to 8.
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Fri, 04 May 2012 11:57:30 +0200
 
 burp (1.3.4-1) unstable; urgency=low
 
-  * New upstream release version 1.3.3
-    - Fixed make error during build process
-    - Fixed compression directive not fully functional only numeric value
-      allowed Debian bug: (Closes: #665843)
-    - Fix "Build of version 1.3.2 failing"  (Closes: #669107)
-    - Tidy up "Raw partition" (Closes: #670598)
-    - Prevent client from browsing backups (Closes: #670599)
-    - Prevent client from running a restore (Closes: #670600)
+  * New upstream release.
+    - Fix make error during build process.
+    - Fix syntax of compression directive. (Closes: #665843)
+    - Allow alternative configuration file paths for burp-ca. (Closes: #669107)
+    - Tidy up "Raw partition". (Closes: #670598)
+    - Prevent client from browsing backups. (Closes: #670599)
+    - Prevent client from running a restore. (Closes: #670600)
     - Fix "Document or implement ability to prevent *client* from initiating
-      manual backup (Closes: #670601)
+      manual backup". (Closes: #670601)
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sat, 28 Apr 2012 09:22:05 +0200
 
-
 burp (1.3.1-1) unstable; urgency=low
 
-  * New upstream release version 1.3.1
-    - Switched to Standards-Version 3.9.3 Debian bug: (Closes: #661001)
-    - respect noopt in DEB_BUILD_OPTIONS. Debian bug: (Closes: #661281)
-    - Fixed typo in logrotate script Debian bug: (Closes: #660964)
-    - added debug package Debian bug: (Closes: #661267)
-    - Add 'exclude_fs =' option for Linux so that you can skip partitions
-      types (for example, tmpfs) without generating warnings.
-    - If recovery method 'resume' is set, but the includes/excludes change,
-      switch to 'use', then start a new backup.
-    - In the tests, check to see whether it looks like the server has finished
-      the backup before moving on, rather than just waiting a set amount of time.
-    - Remove embedded uthash code. It will need to be installed as a dependency.
-      For example, in Debian, you might run 'apt-get install uthash-dev'.
-    - Add Bas van den Dikkenberg's tweaks for getting burp into official Debian
-      and Ubuntu repositories. Burp is now in debian sid and ubuntu precise.
+  * New upstream release.
+    - Respect noopt in DEB_BUILD_OPTIONS. (Closes: #661281)
     - Make the server tell the client what extra_comms features it supports, so
       that, in future, old servers are more likely to work with new clients.
     - Improve 'make clean'.
-    - Add option to strip off leading path components on restore.
-    - Fix segfault that was happening on the server when SSL_accept() failed.
-    - Move burp and bedup to /usr/sbin (you need to check that any cron jobs
-      are pointing there too).
-    - Moved list of things to do to https://github.com/grke/burp/issues
+    - Add option to strip off leading-path components on restore.
+    - Fix a segfault that was happening on the server when SSL_accept() failed.
+    - Move burp and bedup to /usr/sbin.
+    - Move TODO list to https://github.com/grke/burp/issues.
+  * Bump Standards-Version to 3.9.3. (Closes: #661001)
+  * Add debug package. (Closes: #661267)
+  * Fix typo in logrotate script. (Closes: #660964)
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Mon, 27 Feb 2012 15:34:17 +0100
 
 burp (1.3.0+20120214git-1) unstable; urgency=low
 
-  * New version from GIT
-  * Compilation bug solved for in farm (Closes: #659692)
-  * New upstream release from GIT branch 1.3.1 on advise of author
-  * Add 'exclude_fs =' option for Linux so that you can skip partitions
-    types (for example, tmpfs) without generating warnings.
-  * If recovery method 'resume' is set, but the includes/excludes change,
-    switch to 'use', then start a new backup.
-  * In the tests, check to see whether it looks like the server has finished
-    the backup before moving on, rather than just waiting a set
-    amount of time.(Closes: #659462)
-  * Add man pages for bedup and burp_ca.
-  * Remove embedded uthash code. It will need to be installed
-    as a dependency. (Closes: #659454)
+  * New upstream snapshot.
+    - Add 'exclude_fs =' option for Linux so that you can skip partitions
+      types (for example, tmpfs) without generating warnings.
+    - If recovery method 'resume' is set, but the includes/excludes change,
+      switch to 'use', then start a new backup.
+    - In the tests, check to see whether it looks like the server has finished
+      the backup before moving on, rather than just waiting for a set
+      amount of time. (Closes: #659462)
+    - Remove embedded uthash code. It's now pulled in through
+      a build dependency on uthash-dev. (Closes: #659454)
+  * Drop patches that have been merged upstream:
+    - debian/patches/add-missing-manpages
+    - debian/patches/adjust-sleep-intest-mode
+    - debian/patches/mailtolog
+    - debian/patches/varrunowndir
+  * Drop redundant init script debian/init.d.
+  * Rename init script debian/init.DEBIAN to debian/init.
+  * Add debian/patches/Backup-phase2-compilation-problem to
+    fix FTBFS on the buildds. (Closes: #659692)
+  * Add debian/patches/Updated-man-pages to clean up manpages.
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 14 Feb 2012 15:47:01 +0100
 
 burp (1.3.0-3) unstable; urgency=low
 
-  * Forgot to add 1 patch
+  * Add missing debian/patches/mailtolog to debian/patches/series.
+  * Remove Debian changelog entries from all Debian patches.
+  * Add Forwarded: and Last-Update: headers to debian/patches
+    where these are missing:
+    - debian/patches/add-missing-manpages
+    - debian/patches/adjust-sleep-intest-mode
+    - debian/patches/varrunowndir
+  * Raise sleep time after compiliation tests in
+    debian/patches/adjust-sleep-intest-mode from 30 to 50.
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sun, 12 Feb 2012 14:50:29 +0100
 
 burp (1.3.0-2) unstable; urgency=low
-    
-  * added forwarded header to patches
-  * removed changelog entries from patches
-  * removed debian/README (Closes: #659453)
-  * removed blank MAILTO header in cronjob and
-    redirected output to /var/log/burp-client (Closes: #659452)
-  * added extra logrotate for /var/log/burp-client
-  * changed /var/run to /run (Closes: #659464)
-  * thanks to Justin B Rye from debian-l10n-english team for
-     helping with linguistic support
+
+  * Add Forwarded: and Last-Update: headers.
+  * Remove changelog entries from patches.
+  * Remove redundant file debian/README. (Closes: #659453)
+  * Remove blank MAILTO header in cronjob and redirect
+    output to /var/log/burp-client. (Closes: #659452)
+  * Add extra logrotate for /var/log/burp-client.
+  * Change /var/run to /run. (Closes: #659464)
+  * Thanks to Justin B Rye from the debian-l10n-english
+    team for helping with the linguistic support.
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sat, 11 Feb 2012 23:48:03 +0100
 
 burp (1.3.0-1) unstable; urgency=low
 
-  * changed file permissions in rules file
-  * removed empty todo and readme
-  * fixed a typo in the control file
-  * override_dh_auto_configure restore is necessary to run
-    ./configure without any options
-    the configure files places the files in the correct
-    directory for a Debian build
-  * added watch file
-  * made patch to move PID file
-  * fixed lintian errors
-  * corrected the Copyright file
-  * initial release (Closes: #658152)
-  * switched to 3.0 (quilt)
-  * made lintian override file for file permissions
-  * added man pages for bedup and burp_ca
-
+  * Initial release. (Closes: #658152)
+  * Import Debian packaging from upstream with the following changes:
+    - Fix file permissions in debian/rules for the burp configuration
+      files and spool directory (600 and 700 respectively).
+    - Remove empty TODO and README.
+    - Fix a typo in the control file.
+    - Add override_dh_auto_configure in debian/rules to enforce that the
+      configure script is called without any arguments. The configure
+      script sets the proper install prefix for the Debian build
+      automatically.
+    - Add a watch file.
+    - Add patch to move location of PID file.
+    - Fix lintian errors.
+    - Correct the debian/copyright file
+    - Switch source format to 3.0 (quilt).
+    - Add lintian override for non-standard-file-perm.
+      and non-standard-dir-perm.
+    - Add man pages for bedup and burp_ca.
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Fri, 10 Feb 2012 17:14:13 +0100
-
-
-Old Changelog:
-
-burp (1.3.0) unstable; urgency=low
-
-  * update to 1.3.0
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Fri, 27 January 2012 17:00:00 +0000
-
-burp (1.2.7) unstable; urgency=low
-
-  * update to 1.2.7
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Fri, 30 December 2011 22:00:00 +0000
-
-burp (1.2.5) unstable; urgency=low
-
-  * update to 1.2.5
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Sat, 26 November 2011 23:30:00 +0000
-
-burp (1.2.4) unstable; urgency=low
-
-  * update to 1.2.4
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Thu, 22 November 2011 20:00:00 +0000
-
-burp (1.2.2) unstable; urgency=low
-
-  * update to 1.2.2
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Thu, 29 September 2011 21:00:00 +0000
-
-burp (1.2.0) unstable; urgency=low
-
-  * update to 1.2.0
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Fri, 09 September 2011 20:20:00 +0000
-
-burp (1.1.70) unstable; urgency=low
-
-  * update to 1.1.70
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Tue, 26 July 2011 22:00:00 +0000
-
-burp (1.1.65) unstable; urgency=low
-
-  * update to 1.1.65
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Mon, 27 June 2011 21:40:00 +0000
-
-burp (1.1.57) unstable; urgency=low
-
-  * update to 1.1.57
-
- -- Graham Keeling <burp-users@lists.sourceforge.net> Tue, 06 June 2011 23:00:00 +0000
-
-burp (1.1.55) unstable; urgency=low
-
-  * update to 1.1.55
-
- -- Patrick Koppen <software@koppen.de> Sat, 14 May 2011 21:48:17 +0200
-
-burp (1.1.51+git0) unstable; urgency=low
-
-  * debian package
-
- -- Patrick Koppen <software@koppen.de> Mon, 09 May 2011 21:24:24 +0200
-
-burp (1.1.51) unstable; urgency=low
-
-  * Initial Release.
-
- -- Patrick Koppen <software@koppen.de> Mon, 09 May 2011 20:48:57 +0200
