--- a/TODO
+++ b/TODO
@@ -7,6 +7,9 @@ However, that is currently relating only to burp1 issues.
 So, this is a list of important stuff that needs to be done for burp2,
 roughly in order of most important to least.
 
+* Integrate with legacy code to allow old clients to continue operating, and
+  to allow new clients to operate in legacy mode.
+
 * Get a lock before writing to a data file.
 
 * Get a lock before regenerating a sparse index.
