--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,8 @@
   * Rename configure.in to configure.ac to avoid Debian build warnings.
   * Make test script check for lock file instead of working/finishing symlinks
     when checking whether an operation has finished yet.
+  * Fix encryption casting problem on 64 bit big endian platforms (eg, s390x,
+    ppc64, sparc64).
 
 2013-12-01 Changes in burp-1.4.10:
   * Bug fix for false failure notification when a client tries to connect again
