--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2014-03-29 Changes in burp-1.4.12:
   * Make 'make test' skip tests if no source of randomness seems to exist
     for openssl to use.
   * Bug fix for restoring correct file times on Windows clients.
@@ -46,6 +47,9 @@
 2013-07-29 Changes in burp-1.4.0
   * Add Abbas Khan's RHEL spec files and related things.
   * Add Benjamin Sans's include_glob feature.
+
+2014-01-27 Changes in burp-1.3.48:
+  * Bug fix for restoring correct file times on Windows clients.
 
 2013-12-30 Changes in burp-1.3.46:
   * Another bug fix for false failure notification - differentiate between
