--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,111 @@
+2014-03-29 Changes in burp-2.0.4:
+  * First release of burp-2. Use with extreme caution.
+
+2014-03-29 Changes in burp-1.4.12:
+  * Make 'make test' skip tests if no source of randomness seems to exist
+    for openssl to use.
+  * Bug fix for restoring correct file times on Windows clients.
+  * Bug fix for false failure notification - differentiate between
+    not getting a lock and getting an error when trying to get a lock.
+  * Turn off excessive logging on some restores.
+  * Debian packaging changes.
+  * Rename configure.in to configure.ac to avoid Debian build warnings.
+  * Make test script check for lock file instead of working/finishing symlinks
+    when checking whether an operation has finished yet.
+  * Fix encryption casting problem on 64 bit big endian platforms (eg, s390x,
+    ppc64, sparc64).
+
+2013-12-01 Changes in burp-1.4.10:
+  * Bug fix for false failure notification when a client tries to connect again
+    while a backup is still in progress.
+
+2013-11-27 Changes in burp-1.4.8:
+  * Be sure to close directory file descriptor if fdopendir() fails.
+  * Extend the JSON list functionality so that covers all types of listing.
+  * Allow the backup to carry on if a filename was too long for the server.
+  * Regenerate server certificates if the CA directory exists and is empty.
+  * Add machine-readable statistics files for restores and verifies in the
+    backup directories.
+  * Bug fix for server not exiting after one connection with '-n'.
+  * Add 'manual_delete=<directory>' option. This makes the server move
+    directories to be deleted to the specified directory, with the intention
+    that they will be deleted manually (perhaps by a cron job) later.
+
+2013-10-30 Changes in burp-1.4.6:
+  * Add client option '-a T', which checks whether it is yet time for a backup
+    without actually doing a backup.
+
+2013-10-02 Changes in burp-1.4.4:
+  * Bug fix for include_glob xmalloc success check on Windows.
+  * Fix long list and status monitor output when a directory argument is given.
+  * Fix restore problem with backups containing both compressed and
+    uncompressed files.
+  * Bug fix for an interrupted backup causing a resume when a restore_client
+    connects.
+  * Bug fix for defaulting 'resume partial' to off.
+
+2013-09-02 Changes in burp-1.4.2
+  * Add a machine-readable statistics file to each backup directory.
+
+2013-07-29 Changes in burp-1.4.0
+  * Add Abbas Khan's RHEL spec files and related things.
+  * Add Benjamin Sans's include_glob feature.
+
+2014-01-27 Changes in burp-1.3.48:
+  * Bug fix for restoring correct file times on Windows clients.
+
+2013-12-30 Changes in burp-1.3.46:
+  * Another bug fix for false failure notification - differentiate between
+    not getting a lock and getting an error when trying to get a lock.
+  * Turn off excessive logging on some restores.
+
+2013-12-01 Changes in burp-1.3.44:
+  * Bug fix for false failure notification when a client tries to connect again
+    while a backup is still in progress.
+
+2013-11-27 Changes in burp-1.3.42:
+  * In backup phase 4, a 'deleteme' directory may already exist if the server
+    was previously interrupted whilst deleting it. If so, delete it before
+    attempting to rename anything to it.
+
+2013-10-30 Changes in burp-1.3.40:
+  * Make the server request the whole file when ctime changes on Windows,
+    otherwise changes to metadata when the file content is unchanged will not
+    be noticed.
+  * Add 'delete' to the client help output.
+  * Bug fix for the include_glob code being run on the server side.
+  * Bug fix for in the include_glob code not initialising the glob_t struct
+    correctly.
+  * Get 'include_glob=' in the clientconfdir server side file to work without
+    also needing an 'include='.
+  * When backing up, open files and directories with O_NOATIME flag so that the
+    access time is not changed.
+  * Bug fix for no failure notification being sent when the backup directory
+    cannot be created.
+
+2013-10-02 Changes in burp-1.3.38:
+  * Fix long list and status monitor output when a directory argument is given.
+  * Fix restore problem with backups containing both compressed and
+    uncompressed files.
+  * Bug fix for an interrupted backup causing a resume when a restore_client
+    connects.
+  * Bug fix for defaulting 'resume partial' to off.
+
+2013-07-29 Changes in burp-1.3.36:
   * Fix truncation of timestamps in the live status monitor.
+  * Default the 'resume partial' feature to being off, and add an option to
+    turn it on.
+  * Upgraded Windows cross tools to:
+	+ binutils-2.23.1
+	+ gcc-4.7.3
+	+ gmp-5.1.2
+	+ mingw-w64-v2.0.8
+	+ mpc-1.0.1
+	+ mpfr-3.1.2
+  * Upgraded Windows depkgs to:
+	+ openssl-1.0.1e
+	+ zlib-1.2.8
+	+ pcre-8.33
 
 2013-06-29 Changes in burp-1.3.34:
   * Contributions from Avi Rozen:
