--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -574,7 +574,7 @@ When backing up Windows computers, this option allows you to prevent the VSS hea
 When backing up Windows computers, this option allows you to specify which drives have VSS snapshots taken of them. If you omit this option, burp will automatically decide based on the 'include' options. If you want no drives to have snapshots taken of them, you can specify '0'.
 .TP
 \fBatime=[0|1]\fR
-This allows you to control whether the client uses O_NOATIME when opening files and directories. The default is 0, which enables O_NOATIME. This means that the client can read files and directories without updating the access times. However, this is only possible if you are running as root, or are the owner of the file or directory. If this is not the case (perhaps you only have group or world access to the files), you will get errors until you set atime=1. With atime=1, the access times will be updated on the files and directories that get backed up.
+This allows you to control whether the client uses O_NOATIME when opening files and directories. The default is 0, which enables O_NOATIME. This means that the client can read files and directories without updating the access times. However, this is only possible if you are running as root, or are the owner of the file or directory. If this is not the case (perhaps you only have group or world access to the files), you will get errors until you set atime=1. With atime=1, the access times will be updated on the files and directories that get backed up. As an alternative, you may consider setting capability 'CAP_FOWNER' on the client burp binary - see 'man capabilities'.
 
 .SH SERVER CLIENTCONFDIR FILE
 .TP
