--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2014-04-29 Changes in burp-1.4.14:
   * Add an 'atime' option, which allows the user to choose whether to use
     O_NOATIME or not.
   * Fix function not returning anything when it should return an int
