Website tweaks for 1.4.14 release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,12 @@
 2014-03-29 Changes in burp-2.0.4:
   * First release of burp-2. Use with extreme caution.
 
+2014-04-29 Changes in burp-1.4.14:
+  * Add an 'atime' option, which allows the user to choose whether to use
+    O_NOATIME or not.
+  * Fix function not returning anything when it should return an int
+    in list_server.c.
+
 2014-03-29 Changes in burp-1.4.12:
   * Make 'make test' skip tests if no source of randomness seems to exist
     for openssl to use.
