CHANGELOG and website changes from 1.4.16.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,21 @@
 2014-03-29 Changes in burp-2.0.4:
   * First release of burp-2. Use with extreme caution.
 
+2014-05-31 Changes in burp-1.4.16:
+  * Bug fix for restoring permissions on empty directories.
+  * Compile for systems that have no O_NOATIME and fdopendir() - ie, Mac OS X.
+  * Bug fix - some readlink() returns were getting assigned to an unsigned
+    variable, not a signed variable.
+  * Removed references to old '-l' logfile option.
+  * Added Jarkko Kniivilä's FreeBSD init script.
+  * Added Jarkko Kniivilä's tweaks to make scripts run more easily on FreeBSD.
+  * In bedup, detect if a rename failed after unlinking the target file,
+    print a warning and stop processing.
+  * Fix a case where an interrupted backup may not have been automatically
+    recoverable.
+  * Set IPTOS_THROUGHPUT bit on Windows, so that burp is doing the right thing
+    even if Windows decides to remove it.
+
 2014-04-29 Changes in burp-1.4.14:
   * Add an 'atime' option, which allows the user to choose whether to use
     O_NOATIME or not.
